--- a/app/views/trips/_search.html.erb
+++ b/app/views/trips/_search.html.erb
@@ -37,6 +37,10 @@
         <%= f.label :allocation, "Allocation:" %> 
         <%= f.grouped_collection_select :allocation, Provider.default_order.includes(:allocations).all, :allocations, :name, :id, :select_label, :include_blank => true %>
       </li>
+      <li>
+        <%= f.label :result_code, "Result Code:" %> 
+        <%= f.select :result_code, @result_codes, :include_blank => true %>
+      </li>
     </ol>
 
     <div class="actions">
