Restyle flex report description area

--- a/app/views/flex_reports/show.html.erb
+++ b/app/views/flex_reports/show.html.erb
@@ -2,16 +2,16 @@
   <h1><% if @report.name %><%= @report.name %><% else %>Network Service Summary<% end %></h1>
 </div>
 
-<p>
+<div id="date-header">
   <span class="month-range">
     <%= report_month_range @report.start_date, @report.query_end_date %>
   </span>
   <span class="separator csv">|</span>
   <%= link_to "CSV", params.merge({:action=>:csv}), :class=>"csv" %>
-</p>
+</div>
 
-<%= content_tag :p, "Adjustments for #{report_month_range @report.adjustment_start_date, @report.adjustment_end_date}" if @report.adjustment? %>
-<%= content_tag :p, @report.description if @report.description.present? %>
-<%= content_tag :p, "Grouping: " << @report.group_fields.join(", ").titleize if @report.group_fields.present? %>
+<%= content_tag(:div, "Adjustments for #{report_month_range @report.adjustment_start_date, @report.adjustment_end_date}", :id => "adjustment-description") if @report.adjustment? %>
+<%= content_tag(:div, @report.description, :id => "report-description") if @report.description.present? %>
+<%= content_tag(:div, "Grouping: " << @report.group_fields.join(", ").titleize, :id => "grouping-description") if @report.group_fields.present? %>
 
 <%= render :partial=> "report", :locals=>{:results=>@report.results, :group_fields=>@report.group_fields} %>
