--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1188,6 +1188,18 @@ p input[type="checkbox"] {
     padding-bottom: 5px;
     margin-bottom: 5px;
 }
+body.flex-reports #date-header {
+  float: left;
+  width: 50%;
+}
+body.flex-reports #report-description {
+  float: right;
+  width: 50%;
+}
+body.flex-reports #grouping-description {
+  clear: both;
+  margin-bottom: .5em;
+}
 span.month-range {
   font-size: 23px;
 }
