Clean up runs controller and search

--- a/app/views/trips/_trips.html.erb
+++ b/app/views/trips/_trips.html.erb
@@ -46,7 +46,7 @@
             </td>
             <td class="number"><%= number_to_currency trip.fare %></td>
             <td>
-              <%= link_to "Details", {:action=>:show, :id=>trip.id}, {:title=>"View details for this trip", :class => :details} %>
+              <%= link_to "Details", {:controller => :trips, :action=>:show, :id=>trip.id}, {:title=>"View details for this trip", :class => :details} %>
             </td>
           </tr>
         <% end %>
