--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,8 +1,6 @@
 <div id="page-header">
   <h1>Editing Customer: <%= @customer.name %></h1>
 </div>
-
 <%= render 'form' %>
-
 <hr />
-
+<%= render 'trips/trips', :trips => @trips %>
