Flex reports: relabel pending switch, hide adjustments option

--- a/app/views/flex_reports/_run_form.html.erb
+++ b/app/views/flex_reports/_run_form.html.erb
@@ -9,9 +9,9 @@
     </li>
     <li>
       <%= f.check_box :pending %>
-      <%= f.label :pending %>
+      <%= f.label :pending, "Include pending" %>
     </li>
-    <li>
+    <li class="hidden">
       <%= f.check_box :adjustment %>
       <%= f.label :adjustment, "Adjustments" %>
     </li>
