--- a/app/views/flex_reports/index.html.erb
+++ b/app/views/flex_reports/index.html.erb
@@ -17,7 +17,7 @@
         <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?", :class=>'delete-report' %>
       <% end %>
 
-      <%= form_for report, :html => { :class => "run-report" } do |f| %>
+      <%= form_for report, :html => { :class => "run-report", :method => :get } do |f| %>
         <fieldset>
           <h2 class="report-header"><%= report.name %></h2>
           <%= content_tag :p, report.description if report.description.present? %>
