Properly set date range showing flex report, return to POSTing form on flex report edit page.

--- a/app/views/flex_reports/edit.html.erb
+++ b/app/views/flex_reports/edit.html.erb
@@ -2,7 +2,7 @@
   <h1>Edit Flex Report</h1>
 </div>
 
-<%= form_for(@report, :html => {:class => "run-report", :method => :get}) do |f| %>
+<%= form_for(@report, :html => {:class => "run-report"}) do |f| %>
   <fieldset>
     <h2>Run Report</h2>
     <hr>
