--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -6,37 +6,37 @@
   <td class="inner-most-field"><%= label %></td>
   <% if @report.results_fields.member? 'funds' %>
     <td class="number">
-      <%= number_to_currency(row.funds, :precision => 0) %>
+      <%= number_to_currency(row.funds, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'agency_other' %>
     <td class="number">
-      <%= number_to_currency(row.agency_other, :precision => 0) %>
+      <%= number_to_currency(row.agency_other, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'vehicle_maint' %>
     <td class="number">
-      <%= number_to_currency(row.vehicle_maint, :precision => 0) %>
+      <%= number_to_currency(row.vehicle_maint, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'administrative' %>
     <td class="number">
-      <%= number_to_currency(row.administrative, :precision => 0) %>
+      <%= number_to_currency(row.administrative, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'operations' %>
     <td class="number">
-      <%= number_to_currency(row.operations, :precision => 0) %>
+      <%= number_to_currency(row.operations, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'donations' %>
     <td class="number">
-      <%= number_to_currency(row.donations, :precision => 0) %>
+      <%= number_to_currency(row.donations, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'total' %>
     <td class="number total">
-      <%= number_to_currency(row.total, :precision => 0) %>
+      <%= number_to_currency(row.total, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'in_district_trips' %>
@@ -81,17 +81,17 @@
   <% end %>
   <% if @report.results_fields.member? 'cost_per_trip' %>
     <td class="number">
-      <%= row.cost_per_trip.present? ? number_to_currency(row.cost_per_trip) : raw("&mdash;") %>
+      <%= row.cost_per_trip.present? ? number_to_currency(row.cost_per_trip, :negative_format => "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'cost_per_mile' %>
     <td class="number">
-      <%= row.cost_per_mile.present? ? number_to_currency(row.cost_per_mile) : raw("&mdash;") %>
+      <%= row.cost_per_mile.present? ? number_to_currency(row.cost_per_mile, :negative_format => "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'cost_per_hour' %>
     <td class="number">
-      <%= row.cost_per_hour.present? ? number_to_currency(row.cost_per_hour) : raw("&mdash;") %>
+      <%= row.cost_per_hour.present? ? number_to_currency(row.cost_per_hour, :negative_format => "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'miles_per_ride'%>
