--- a/app/views/flex_reports/index.html.erb
+++ b/app/views/flex_reports/index.html.erb
@@ -10,11 +10,14 @@
   <% for report in @reports %>
     <li class="flex-report" data-id="<%= report.id %>">
       <%= form_for report, :html => { :method => 'delete' } do |f| %>
-        <span class="handle">[Reorder]</span>
-      
-        <%= link_to "Edit Report", edit_flex_report_path(report), :class => "edit" %>
         <input type="hidden" name="report[id]" value="<%= report.id %>" />
-        <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?", :class=>'delete-report' %>
+        <% if current_user.is_admin %>
+          <span class="handle">[Reorder]</span>
+          <%= link_to "Edit Report", edit_flex_report_path(report), :class => "edit" %>
+          <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?", :class=>'delete-report' %>
+        <% else %>
+          <%= link_to "View Report Definition", edit_flex_report_path(report), :class => "details" %>
+        <% end %>
       <% end %>
 
       <%= form_for report, :html => { :class => "run-report", :method => :get } do |f| %>
